siduxcc (0.10.5) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 02 Jun 2008 10:13:01 +0200

siduxcc (0.10.4) unstable; urgency=low

  [ Fabian Wuertz ]
  * gtk icon-problem/dependency problem fixed

  [ Stefan Lippers-Hollmann ]
  * make siduxcc_gtk2/gtk2/scripts/siduxcc-gtk2.rb executable, use exec to
    start it.
  * drop shebang from siduxcc/scripts/loadssft.sh, it never gets executed, but
    only sourced.
  * siduxcc-gtk2 is arch independent, build it as such.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 02 Jun 2008 10:06:55 +0200

siduxcc (0.10.3) unstable; urgency=low

  * hermes: typo
  * hermes update time from 5h to 30min set

 -- Fabian Wuertz <xadras@sidux.com>  Fri, 30 May 2008 12:48:44 +0200

siduxcc (0.10.2) unstable; urgency=low

  * cli: missing file loadssft.sh added in siduxcc-common.install 

 -- Fabian Wuertz <xadras@sidux.com>  Wed, 28 May 2008 15:30:51 +0200

siduxcc (0.10.1) unstable; urgency=low

  * kde: console part updated
  * kde: close question added

 -- Fabian Wuertz <xadras@sidux.com>  Wed, 28 May 2008 05:06:31 +0200

siduxcc (0.10.0) unstable; urgency=low

  * siduxcc.svn moved from siduxcc to siduxcc-common
  * cli: ssft functions added. 
  * gtk2 version added.
  * cli: completely changed to ssft
  * cli: Title var added
  * cli: display menu updated
  * cli: ssftFrequenz function added
  * cli: about problem solved

 -- Fabian Wuertz <xadras@sidux.com>  Mon, 26 May 2008 21:23:05 +0200

siduxcc (0.9.44) unstable; urgency=low

  * de: typo
  * hermes: warningsystem changed to smxi
  * hermes: smxi warningsystem partially reverted

 -- Fabian Wuertz <xadras@sidux.com>  Sat, 17 May 2008 12:13:06 +0200

siduxcc (0.9.43) unstable; urgency=low

  [ Fabian Wuertz ]
  * Non-maintainer upload.
  * getStableKernel fixed
  * Nameserver function updated

  [ Stefan Lippers-Hollmann ]
  * add xadras to uploaders.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 12 May 2008 18:54:55 +0200