@@ -1,8 +1,12 @@
 siduxcc (0.10.5) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 02 Jun 2008 10:13:01 +0200
+  [ Fabian Wuertz ]
+  * ruby file moved to /usr/bin
+
+ -- Fabian Wuertz <xadras@sidux.com>  Mon, 02 Jun 2008 11:35:39 +0200
 
 siduxcc (0.10.4) unstable; urgency=low
 
